@@ -1,3 +1,6 @@
+Sat 16 Mar 2019 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Run tests using DB connection in a transaction
+
 Sun 03 Mar 2019 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
 	* Create log message saving functionality (update diesel to 0.4.1)
 	* Add types LogLevel and LogFormat
